# rust-in-hpc

./: .gitattributes  .gitignore  .gitmodules  Readme.md  cuda.md  notes.md  todo.md
cmake/: CMakeLists.txt
cmake/cmake/: CMakeDetermineRustCompiler.cmake  CMakeRustCompiler.cmake.in  CMakeRustInformation.cmake  CMakeTestRustCompiler.cmake  (+1 more)
craypat/: Cargo.toml  build.rs
cublasxt/: .gitignore  Cargo.toml  Readme.md
cublasxt/cublasxt-sys/: .gitignore  Cargo.toml  build.rs
cublasxt/cublasxt-sys/src/: lib.rs
cuda_const/: Cargo.toml
cuda_shared/: Cargo.toml  build.rs
cuda_simple/: .gitignore  Cargo.toml  Readme.md  build.rs
cuda_simple/src/: main.rs
cudars/: Cargo.toml
cudars/cudars-derive/: Cargo.toml
cudars/cudars-derive/src/: constant.rs  cuda.rs  device.rs  global.rs  host.rs  lib.rs  shared.rs
cudars/cudars-support/: Cargo.toml
cudars/cudars-support/src/: alloc.rs  lib.rs  panic.rs  print.rs
cudars/examples/: test.rs
cudars/src/: dim.rs  main.rs
diffusion/: Cargo.toml  error.py
diffusion/src/: CMakeLists.txt  main.rs  partitioner.rs  perf.data  utils.rs
diffusion/src/diffusion/: mod.rs  par.rs  seq.rs  seq0.rs  seq1.rs  seq2.rs
diffusion/src/halo/: mod.rs  seq.rs
diffusion/stencil/: Cargo.toml  error.py  perf.data  perf.data.old
diffusion/stencil/fast_float/: Cargo.toml
diffusion/stencil/stencil/: Cargo.toml
diffusion/stencil/stencil/src/: lib.rs  main.rs
diffusion/stencil/stencil_lib/: Cargo.toml  build.rs
diffusion/stencil/stencil_lib/src/: lib.rs
diffusion/stencil/stencil_lib/src/cpp/: mod.rs
diffusion/stencil/stencil_lib/src/f/: mod.rs
diffusion/stencil/stencil_lib/src/rs/: mod.rs
diffusion/stencil/tofrom_bytes/: Cargo.toml
diffusion/stencil/tofrom_bytes/src/: lib.rs
doc/: .gitignore  book.toml
eigenrs/: Cargo.toml
gemm/: Cargo.toml  Readme.md  build.rs
gemm_perf/: Cargo.toml  Readme.md
gemm_perf/benches/: benchmark.rs
gemm_perf/src/: lib.rs
gemm_perf2/: Cargo.toml  build.rs
gemm_perf3/: Cargo.toml
installing_rust/: .gitignore  Readme.md  llvm-proxy-path.patch  ptx-linker.patch
interop/: Readme.md
interop/fortran2rust/: CMakeLists.txt  Cargo.toml  Readme.md
interop/fortran2rust/examples/: CMakeLists.txt  fortran2rust.f
interop/fortran2rust/src/: lib.rs
interop/python2rust/: .gitignore  Cargo.toml  Readme.md  main.py  pyproject.toml
interop/python2rust/python2rust/: __init__.py
interop/python2rust/src/: lib.rs
interop/rust2cpp/: .gitignore  Cargo.toml  Readme.md  build.rs
interop/rust2cpp/examples/: rust2cpp.rs
interop/rust2cpp/src/: CMakeLists.txt  lib.rs  zaxpy.cpp  zaxpy.hpp
matrs/: Cargo.toml
mpi/: Readme.md  test_mpi.sh
presentation/: 2020-08-25_Presentation.tex  plot.R
rust-meetup/: 2022-05-06_Meetup.tex  data.txt  scaling_gpu.tex
special_functions/: Readme.md
stencil/: Cargo.toml  benchmark.out  build.rs  error.py  in_field_1024_1024_64_1024_base.npy  in_field_256_256_64_1024_base.npy  in_field_512_512_64_1024_base.npy  out_field_1024_1024_64_1024_base.npy  out_field_256_256_64_1024_base.npy  out_field_512_512_64_1024_base.npy
stencil/data/: cray_cpp_inline_openmp_128_128_64_1024_out_field.npy  cray_cpp_inline_seq_128_128_64_1024_out_field.npy  cray_fortran_inline_openmp_target_128_128_64_1024_out_field.npy  cray_fortran_laplap_openmp_128_128_64_1024_out_field.npy  gnu_cpp_inline_cuda_128_128_64_1024_out_field.npy  gnu_cpp_inline_openmp_target_128_128_64_1024_out_field.npy  gnu_cpp_laplap_openmp_128_128_64_1024_out_field.npy  gnu_fortran_inline_openmp_128_128_64_1024_out_field.npy  gnu_fortran_inline_seq_128_128_64_1024_out_field.npy  gnu_fortran_laplap_openacc_128_128_64_1024_in_field.npy  gnu_fortran_laplap_openmp_128_128_64_1024_out_field.npy  intel_cpp_laplap_cuda_128_128_64_1024_out_field.npy  intel_cpp_laplap_openmp_128_128_64_1024_out_field.npy  intel_cpp_laplap_seq_128_128_64_1024_out_field.npy  intel_fortran_inline_seq_128_128_64_1024_out_field.npy  intel_fortran_laplap_openmp_128_128_64_1024_out_field.npy  pgi_cpp_laplap_openacc_1_1_1_2_in_field.npy  pgi_cpp_laplap_openmp_target_1_1_1_2_out_field.npy  pgi_fortran_inline_openacc_128_128_64_1024_out_field.npy  pgi_fortran_inline_openmp_target_128_128_64_1024_out_field.npy  pgi_fortran_laplap_openacc_128_128_64_1024_out_field.npy  pgi_fortran_laplap_seq_128_128_64_1024_out_field.npy  rustc_rust_inline_seq_fast_128_128_64_1024_out_field.npy  rustc_rust_inline_seq_fma_128_128_64_1024_out_field.npy  rustc_rust_inline_seq_unchecked_128_128_64_1024_out_field.npy
stencil/fast_float/: Cargo.toml
stencil/fast_float/src/: lib.rs
stencil/lib/: CMakeLists.txt  Cargo.toml
stencil/lib/cmake/: CUDA_FLAGS.cmake  CXX_FLAGS.cmake  Flags.cmake  Fortran_FLAGS.cmake  Rust_FLAGS.cmake
stencil/lib/cpp/: CMakeLists.txt  array.hpp  inline_cuda.cu  inline_openacc.cpp  inline_openmp.cpp  inline_openmp_target.cpp  inline_seq.cpp  laplap_cuda.cu  laplap_openacc.cpp  laplap_openmp.cpp  laplap_openmp_target.cpp  laplap_seq.cpp  v0_base.cpp  v0_base.hpp  v1_inline.cpp  v1_inline.hpp
stencil/lib/f/: CMakeLists.txt  inline_cuda.cuf  inline_openacc.f  inline_openmp.f  inline_openmp_target.f  inline_seq.f  laplap_cuda.cuf  laplap_openacc.f  laplap_openmp.f  laplap_openmp_target.f  laplap_seq.f  m_assert.f  m_assert.mod  v0_base.f  v1_inline.f  v2_openmp.f  v3_openmp.f
stencil/lib/rs/: inline_accel.rs  inline_par_axis_zip.rs  inline_par_zip.rs  inline_seq_fast.rs  inline_seq_fma.rs  inline_seq_unchecked.rs  laplap_accel.rs  laplap_par_axis_zip.rs  laplap_par_zip.rs  laplap_seq.rs  laplap_seq_unchecked.rs  laplap_seq_zip.rs  lib.rs  v0_base.rs  v0_unchecked.rs  v1_inline.rs  v2_fast.rs  v3_fma.rs
stencil/lib/scripts/: build.sh  compilers.sh
stencil/scripts/: benchmark.sh  cpu.txt  gpu.txt  greasy.txt  run.sh  seq.txt  submit.sh
stencil/src/: functions.rs  lib.rs  main.rs
stencil/tofrom_bytes/: Cargo.toml
stencil/tofrom_bytes/src/: lib.rs
thesis/: data.ods  data_old.txt  eth_dmath_logo_pos.eps  eth_logo_kurz_pos.eps  plot.R  plot.py  table.py  thesis.bib  thesis.tex
workshop/: 2020-06-26_Rust_Webinar.tex  latexmkrc
(+104 files in other folders)
