[package]
name = "cudars"
version = "0.1.0"
authors = ["Michal Sudwoj <msudwoj@student.ethz.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
ptx-builder = "*"

[dependencies]
cudars-derive = { path = "./cudars-derive" }
cudars-support = { path = "./cudars-support" }
cfg-if = "*"

[target.'cfg(not(target_os = "cuda"))'.dependencies]
rustacuda = "*"
lazy_static = "*"

[target.'cfg(target_os = "cuda")'.dependencies]
ptx-support = { git = "https://github.com/denzp/rust-ptx-support", default_features = true }
lazy_static = { version = "*", features = ["spin_no_std"] }
