[package]
name = "diffusion"
version = "0.1.0"
authors = ["Michal Sudwoj <msudwoj@student.ethz.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = { version = "*", features = ["paw"] }
anyhow = "*"
ndarray = { version = "*", features = ["rayon"] }
paw = "*"
mpi = "*"
libffi = { version = "*", features = ["system"] }
byteorder = "*"
num-traits = "*"
clang-sys = "=0.28.1"
fast_float = { path = "../fast_float" }
tofrom_bytes = { path = "../tofrom_bytes" }

[patch.crates-io]
ndarray = { git = "https://github.com/westernmagic/ndarray" }
mpi = { git = "https://github.com/rsmpi/rsmpi.git" }

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
debug = true

[profile.release.build-override]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
incremental = false
codegen-units = 16
