[package]
name = "gemm_perf"
version = "0.1.0"
authors = ["Michal Sudwoj <msudwoj@student.ethz.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
matrixmultiply = "*"
blas = "*"
openblas-src = { version = "*", features = ["system"] }

[dev-dependencies]
criterion = "*"

[[bench]]
name = "benchmark"
harness = false
