[package]
name = "cublasxt-sys"
version = "0.1.0"
authors = ["Michal Sudwoj <msudwoj@student.ethz.ch>"]
edition = "2018"
links = "cublas"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-complex = "*"

[build-dependencies]
bindgen = "*"
