[workspace]
members = [
	"stencil",
	"stencil_lib",
	"stencil_lib/lib/cmake-cargo/generator",
]

[profile.release]
# lto = "thin"
opt-level = 3
debug = true
# debug-assertions = false
# overflow-checks = false
# incremental = false
codegen-units = 1

[profile.release.build-override]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
incremental = false
codegen-units = 16
