[package]
name = "python2rust"
version = "0.1.0"
authors = ["Michal Sudwoj <msudwoj@student.ethz.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "python2rust"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "*", features = ["extension-module", "num-complex"] }
ndarray = "*"
numpy = "*"
num-complex = "*"

[package.metadata.maturin]
requires-dist = ["numpy"]
