[package]
name = "rust2cpp"
version = "0.1.0"
authors = ["Michal Sudwoj <msudwoj@student.ethz.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
cmake = "*"
cc = "*"
bindgen = "*"

[dev-dependencies]
ndarray = "*"
