[package]
name = "fast_float"
version = "0.1.0"
authors = ["Michal Sudwoj <msudwoj@student.ethz.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "*"
num-derive = "*"
derive_more = "*"
tofrom_bytes = { path = "../tofrom_bytes" }
