[package]
name = "stencil_lib"
version = "0.1.0"
authors = ["Michal Sudwoj <msudwoj@student.ethz.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ndarray = { version = "*", features = ["approx"] }
fast_float = { path = "../fast_float" }
approx = "*"

[build-dependencies]
cmake = "*"

[dev-dependencies]
ndarray-npy = "*"
